@@ -14,6 +14,11 @@
 				<ol style="list-style: disc;">
 					<li>
 						<a href="#sirius7.4.4">Changes in Sirius  Desktop 7.4.4</a>
+						<ol style="list-style: disc;">
+							<li>
+								<a href="#DeveloperVisibleChanges">Developer-Visible Changes</a>
+							</li>
+						</ol>
 					</li>
 					<li>
 						<a href="#sirius7.4.3">Changes in Sirius  Desktop 7.4.3</a>
@@ -25,7 +30,7 @@
 								<a href="#SpecifierVisibleChanges">Specifier-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#DeveloperVisibleChanges">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges2">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -39,7 +44,7 @@
 								<a href="#SpecifierVisibleChanges2">Specifier-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#DeveloperVisibleChanges2">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges3">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -53,7 +58,7 @@
 								<a href="#SpecifierVisibleChanges3">Specifier-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#DeveloperVisibleChanges3">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges4">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -67,7 +72,7 @@
 								<a href="#SpecifierVisibleChanges4">Specifier-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#DeveloperVisibleChanges4">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges5">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -81,7 +86,7 @@
 								<a href="#SpecifierVisibleChanges5">Specifier-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#DeveloperVisibleChanges5">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges6">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -95,7 +100,7 @@
 								<a href="#SpecifierVisibleChanges6">Specifier-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#DeveloperVisibleChanges6">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges7">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -109,7 +114,7 @@
 								<a href="#SpecifierVisibleChanges7">Specifier-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#DeveloperVisibleChanges7">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges8">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -123,7 +128,7 @@
 								<a href="#SpecifierVisibleChanges8">Specifier-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#DeveloperVisibleChanges8">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges9">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -139,7 +144,7 @@
 						<a href="#sirius7.0.3">Changes in Sirius 7.0.3</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#DeveloperVisibleChanges9">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges10">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -150,7 +155,7 @@
 								<a href="#SpecifierVisibleChanges9">Specifier-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#DeveloperVisibleChanges10">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges11">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -158,7 +163,7 @@
 						<a href="#sirius7.0.1">Changes in Sirius 7.0.1</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#DeveloperVisibleChanges11">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges12">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -169,7 +174,7 @@
 								<a href="#UserVisibleChanges10">User-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#DeveloperVisibleChanges12">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges13">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -180,7 +185,7 @@
 								<a href="#UserVisibleChanges11">User-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#DeveloperVisibleChanges13">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges14">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -188,7 +193,7 @@
 						<a href="#sirius6.5.1">Changes in Sirius 6.5.1</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#DeveloperVisibleChanges14">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges15">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -202,7 +207,7 @@
 								<a href="#SpecifierVisibleChanges10">Specifier-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#DeveloperVisibleChanges15">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges16">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -213,7 +218,17 @@
 			<a href="Release_Notes_Previous.html">the release notes from previous versions</a> for details about older releases.
 		</p>
 		<h2 id="sirius7.4.4">Changes in Sirius  Desktop 7.4.4</h2>
-		<p>Nothing.</p>
+		<h3 id="DeveloperVisibleChanges">Developer-Visible Changes</h3>
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui">Changes in 
+			<code>org.eclipse.sirius.diagram.ui</code>
+		</h4>
+		<ul>
+			<li><span class="label label-success">Added</span> A new extension point 
+				<code>org.eclipse.sirius.diagram.ui.colorPalettePopupProvider</code> has been introduced. It allows to provide a custom color palette popup by registering a custom implementation of the new 
+				<code>org.eclipse.sirius.diagram.ui.tools.api.color.ColorPalettePopupProvider</code> interface. See the 
+				<code>exsd</code> file for the extension point for more information and an example.
+			</li>
+		</ul>
 		<h2 id="sirius7.4.3">Changes in Sirius  Desktop 7.4.3</h2>
 		<h3 id="UserVisibleChanges">User-Visible Changes</h3>
 		<ul>
@@ -248,7 +263,7 @@
 				<a href="specifier/diagrams/Diagrams.html#elkRoutingStyleRules">Use an ELK layout algorithm/Specific rules for routing style of edges</a> for more details.
 			</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges2">Developer-Visible Changes</h3>
 		<h4 id="Changesinorg.eclipse.sirius.diagram.elk">Changes in 
 			<code>org.eclipse.sirius.diagram.elk</code>
 		</h4>
@@ -300,7 +315,7 @@
 			</li>
 		</ul>
 		<h3 id="SpecifierVisibleChanges2">Specifier-Visible Changes</h3>
-		<h3 id="DeveloperVisibleChanges2">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges3">Developer-Visible Changes</h3>
 		<h4 id="Migrations2">Migrations</h4>
 		<h2 id="sirius7.4.1">Changes in Sirius  Desktop 7.4.1</h2>
 		<h3 id="UserVisibleChanges3">User-Visible Changes</h3>
@@ -310,8 +325,8 @@
 			</li>
 		</ul>
 		<h3 id="SpecifierVisibleChanges3">Specifier-Visible Changes</h3>
-		<h3 id="DeveloperVisibleChanges3">Developer-Visible Changes</h3>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui">Changes in 
+		<h3 id="DeveloperVisibleChanges4">Developer-Visible Changes</h3>
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui2">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -380,7 +395,7 @@
 			</li>
 			<li><span class="label label-info">Modified</span> The SquareDescription can now have -1 value for height and width. If the value -1 is used for both width and height enable the &#8220;auto-size&#8221; mode.</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges4">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges5">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-danger">Removed</span> AbstractTabbarContributor.createCopyAppearancePropertiesContribution and TabbarContributionFactory.createCopyAppearancePropertiesContribution has been removed.</li>
 			<li><span class="label label-success">Added</span> The SiriusStyleClipboard singleton to store the style clipboard data for the diagram elements.</li>
@@ -427,7 +442,7 @@
 				<code>org.eclipse.sirius.table.tools.api.command.ITableCommandFactory.buildCreateColumnCommandFromTool(DTable, EObject, CreateTool)</code> have been deprecated for removal. They have been replaced by methods using applicable DSemanticDecorator in signature.
 			</li>
 		</ul>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui2">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui3">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -512,8 +527,8 @@
 			<li><span class="label label-success">Added</span> A new preference has been added in the Sirius Diagram preference page. This preference allows the user to choose the arrangement of elements created on a diagram when they are not directly positioned by the user. In the preference page, users can choose between a diagonal, vertical or horizontal arrangement.</li>
 		</ul>
 		<h3 id="SpecifierVisibleChanges5">Specifier-Visible Changes</h3>
-		<h3 id="DeveloperVisibleChanges5">Developer-Visible Changes</h3>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui3">Changes in 
+		<h3 id="DeveloperVisibleChanges6">Developer-Visible Changes</h3>
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui4">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -570,8 +585,8 @@
 				</ul>
 			</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges6">Developer-Visible Changes</h3>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui4">Changes in 
+		<h3 id="DeveloperVisibleChanges7">Developer-Visible Changes</h3>
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui5">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -610,7 +625,7 @@
 				<code>InputArrowWithFillDiamondAndDot</code>.
 			</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges7">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges8">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> Java 17 is required as BREE and source level.</li>
 		</ul>
@@ -662,7 +677,7 @@
 				<code>aql:input.getContextSelections()</code>.
 			</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges8">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges9">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> The interface 
 				<code>org.eclipse.sirius.ecore.extender.business.api.permission.IPermissionAuthority</code> now has a 
@@ -690,7 +705,7 @@
 				<code>org.eclipse.sirius.business.api.session.Session.getSharedMainDAnalysis()</code> is added to get the DAnalysis that holds data and can be shared in some context such as CDO.
 			</li>
 		</ul>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui5">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui6">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -767,7 +782,7 @@
 		<h3 id="UserVisibleChanges9">User-Visible Changes</h3>
 		<p>Minor release to avoid errors thrown during indirect deletion of edges whose label is selected (deletion done from outside the diagram editor or from a custom command).</p>
 		<h2 id="sirius7.0.3">Changes in Sirius 7.0.3</h2>
-		<h3 id="DeveloperVisibleChanges9">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges10">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-danger">Removed</span> To ensure compatibility with Eclipse 2022-09, dependency to 
 				<code>com.ibm.icu</code> has been removed.
@@ -781,7 +796,7 @@
 				<code>otherEnd</code> are now also available during precondition evaluation of a reconnect tool. Before, these variables were available only during the reconnection tool execution.
 			</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges10">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges11">Developer-Visible Changes</h3>
 		<h4 id="Changesinorg.eclipse.sirius3">Changes in 
 			<code>org.eclipse.sirius</code>
 		</h4>
@@ -809,7 +824,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.0.1">Changes in Sirius 7.0.1</h2>
-		<h3 id="DeveloperVisibleChanges11">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges12">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> The behavior concerning SVG images export has been improved. You can refer to 
 				<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=578509">bugzilla 578509</a> for more details. This behavior is activated by default but you may disable it by setting the system property 
@@ -835,7 +850,7 @@
 			<li><span class="label label-info">Modified</span> It is now possible to move a regions container by moving one of its region with the &#8220;Ctrl&#8221; shortcut key pressed. In the same way, it is now possible to select a regions container by clicking on one of its region with the &#8220;Ctrl&#8221; shortcut key pressed.</li>
 			<li><span class="label label-danger">Removed</span> It is no longer possible to change the workspace image of a diagram element with an image from an internal plugin via the &#8220;Set style to workspace image&#8221; action. This functionality affects a very small part of the use cases. The new UI of the &#8220;Set style to workspace image&#8221; action does not support this advanced functionality. However, it is still possible to go through Properties &gt; Style &gt; Workspace Image, then paste the path of the internal plugin image.</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges12">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges13">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> Sirius core and dialects metamodels have been extracted in new 
 				<b>.model</b> plugins with minimum dependencies. Each new plugin is re-exported by the plugin which was the previous container of its metamodel. The base packages of the generated code has not been modified. Each API modification is listed in the corresponding plugin section. Additional dialect providers and extension providers might have to modify the path or references to Sirius .ecore and .genmodel files to reflect this change. The new plugins are:
@@ -1017,7 +1032,7 @@
 				<code>org.eclipse.sirius.diagram.business.internal.metamodel.helper.ContentHelper.getAllEdgeMappings(diagramDescription, false)</code> alongside with the getAllNodeMappings and getAllContainerMappings methods.
 			</li>
 		</ul>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui6">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui7">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -1170,7 +1185,7 @@
 			</li>
 			<li><span class="label label-danger">Removed</span> To be coherent, the actions available &#8220;Diagram/Order&#8221; menu of Eclipse menu bar have been removed. Indeed, these actions are always visible but only valid for nodes. Now, only the contextual menus are to be used (for nodes or for edges).</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges13">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges14">Developer-Visible Changes</h3>
 		<h4 id="Changesinorg.eclipse.sirius.diagram4">Changes in 
 			<code>org.eclipse.sirius.diagram</code>
 		</h4>
@@ -1209,7 +1224,7 @@
 				</ul>
 			</li>
 		</ul>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui7">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui8">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
@@ -1228,7 +1243,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius6.5.1">Changes in Sirius 6.5.1</h2>
-		<h3 id="DeveloperVisibleChanges14">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges15">Developer-Visible Changes</h3>
 		<h4 id="Migrations8">Migrations</h4>
 		<ul>
 			<li><span class="label label-info">Modified</span> The migration participant 
@@ -1273,7 +1288,7 @@
 				</ul>
 			</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges15">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges16">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> It is now possible to keep semantic element traceability during the representation export. For now, this option is only supported for diagram SVG export. In this case, a new attribute 
 				<code>diagram:targetSemanticId</code> is added on SVG elements to reference the target semantic id on which the graphical element is based on. This option can be activated programmatically or by setting a preference. See the details below:
@@ -1331,7 +1346,7 @@
 				<code>new DRepresentationQuery(DRpresentation).isAutoRefresh()</code> instead.
 			</li>
 		</ul>
-		<h4 id="Changesinorg.eclipse.sirius.diagram.ui8">Changes in 
+		<h4 id="Changesinorg.eclipse.sirius.diagram.ui9">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
 		<ul>
